--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,16 @@ body{
 img{
 	width:500px;
 	height:300px;
+	object-fit:cover;
 }
 #sec-2{
 	width:200px;
 	height:300px;
 	background:white;
 	text-align:center;
+}
+p{
+	opacity:0.5;
 }
 a{
 	text-decoration:none;
